# GRCS

./: .gitignore  LICENSE  MASTERPLAN.md  README.md  main.py  prompts.json  prompts.miminal.json  pyproject.toml  requirements.txt  systemprompt.md  temp_help.txt  temp_help2.txt  temp_keys.txt
grcs/: __init__.py  __main__.py  build.py  builder.py  checker.py  engine.py  generator.py  judge_ui.py  utils.py
grcs/templates/: judge.html
maps/: v1.grcs  v1_test.grcs  v1_ui_expert_63_samples.grcs
patches/: v1.ceps  v1_test.ceps  v1_ui_expert_63.ceps
src/: builder.py  checker.py  engine.py  generator.py  judge_ui.py
src/templates/: judge.html
