[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grcs"
version = "1.0.0"
description = "Group Relative Completion Selection - A training-free way to improve model outputs using contrastive preference steering."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Lead Architect" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "sentence-transformers>=2.3.1",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    "tiktoken>=0.6.0",
    "lmstudio",
]

[project.scripts]
grcs = "grcs.__main__:main"

[tool.setuptools]
packages = ["grcs"]
